[gd_scene load_steps=57 format=3 uid="uid://dgs42yeyik5kh"]

[ext_resource type="Shader" path="res://Shaders/goblin_enemy.gdshader" id="1_5bf3r"]
[ext_resource type="Script" path="res://Scripts/goblin_enemy.gd" id="1_8wp1u"]
[ext_resource type="Texture2D" uid="uid://ou2fe8bdki2" path="res://Assets/Sprites/Characters/Torch_Red.png" id="2_ogw5d"]
[ext_resource type="AudioStream" uid="uid://c0w4jebybpevk" path="res://Assets/Audio/SFX/warfare_medieval_katana_sword_swing_002.mp3" id="4_fhupf"]
[ext_resource type="AudioStream" uid="uid://bd0dgxhcheg61" path="res://Assets/Audio/SFX/warfare_medieval_katana_sword_swing_001.mp3" id="4_flq58"]
[ext_resource type="Texture2D" uid="uid://d3str2is7ujgm" path="res://Assets/Sprites/Characters/Explosions.png" id="4_jiok4"]
[ext_resource type="AudioStream" uid="uid://cgko4sgm35xr8" path="res://Assets/Audio/SFX/misc_18.wav" id="7_fodb0"]
[ext_resource type="AudioStream" uid="uid://b0gakai0n15ha" path="res://Assets/Audio/SFX/misc_21.wav" id="9_wxv4n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a4yx3"]
shader = ExtResource("1_5bf3r")
shader_parameter/damage_flash = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ayx31"]
shader = ExtResource("1_5bf3r")
shader_parameter/damage_flash = null

[sub_resource type="AtlasTexture" id="AtlasTexture_rldkr"]
atlas = ExtResource("2_ogw5d")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uk2f"]
atlas = ExtResource("2_ogw5d")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pfck"]
atlas = ExtResource("2_ogw5d")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_16fnq"]
atlas = ExtResource("2_ogw5d")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm0l8"]
atlas = ExtResource("2_ogw5d")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2iiv"]
atlas = ExtResource("2_ogw5d")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge5si"]
atlas = ExtResource("2_ogw5d")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivvhl"]
atlas = ExtResource("2_ogw5d")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lpjt"]
atlas = ExtResource("2_ogw5d")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ra86"]
atlas = ExtResource("2_ogw5d")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ueu"]
atlas = ExtResource("2_ogw5d")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j81e"]
atlas = ExtResource("2_ogw5d")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwnh7"]
atlas = ExtResource("2_ogw5d")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e40ek"]
atlas = ExtResource("2_ogw5d")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_svcvj"]
atlas = ExtResource("2_ogw5d")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxos8"]
atlas = ExtResource("2_ogw5d")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iibvn"]
atlas = ExtResource("2_ogw5d")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dicg"]
atlas = ExtResource("2_ogw5d")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_58sfi"]
atlas = ExtResource("2_ogw5d")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdo7s"]
atlas = ExtResource("2_ogw5d")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_27aso"]
atlas = ExtResource("2_ogw5d")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc5ee"]
atlas = ExtResource("2_ogw5d")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_imcyl"]
atlas = ExtResource("2_ogw5d")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v61j"]
atlas = ExtResource("2_ogw5d")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo3d2"]
atlas = ExtResource("2_ogw5d")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bgwq"]
atlas = ExtResource("2_ogw5d")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x21kx"]
atlas = ExtResource("2_ogw5d")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g3rg"]
atlas = ExtResource("2_ogw5d")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngu4g"]
atlas = ExtResource("4_jiok4")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7co5w"]
atlas = ExtResource("4_jiok4")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjvip"]
atlas = ExtResource("4_jiok4")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj38v"]
atlas = ExtResource("4_jiok4")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukh1u"]
atlas = ExtResource("4_jiok4")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmvjp"]
atlas = ExtResource("4_jiok4")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq7nb"]
atlas = ExtResource("4_jiok4")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxoxf"]
atlas = ExtResource("4_jiok4")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q47ju"]
atlas = ExtResource("4_jiok4")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x7ek"]
atlas = ExtResource("2_ogw5d")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_imydm"]
atlas = ExtResource("2_ogw5d")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n45wv"]
atlas = ExtResource("2_ogw5d")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci2pa"]
atlas = ExtResource("2_ogw5d")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhg8y"]
atlas = ExtResource("2_ogw5d")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yh7a"]
atlas = ExtResource("2_ogw5d")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_6uis5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rldkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uk2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pfck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16fnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm0l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2iiv")
}],
"loop": false,
"name": &"Down_Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge5si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivvhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lpjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ra86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ueu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j81e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwnh7")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e40ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svcvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxos8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iibvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dicg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58sfi")
}],
"loop": false,
"name": &"Side_Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdo7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27aso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc5ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imcyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v61j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo3d2")
}],
"loop": false,
"name": &"Up_Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bgwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x21kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g3rg")
}],
"loop": true,
"name": &"celebrate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngu4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7co5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjvip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj38v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukh1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmvjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq7nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxoxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q47ju")
}],
"loop": false,
"name": &"explode",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x7ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imydm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci2pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhg8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yh7a")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocuaj"]
size = Vector2(34, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_x5fq3"]

[node name="Goblin_Enemy" type="CharacterBody2D" groups=["enemies", "enemies_sprite"]]
z_index = 6
script = ExtResource("1_8wp1u")
shader_material_resource = SubResource("ShaderMaterial_a4yx3")
probability = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ayx31")
sprite_frames = SubResource("SpriteFrames_6uis5")
animation = &"celebrate"
autoplay = "Idle"
frame = 1
frame_progress = 0.598272

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_ocuaj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
z_index = 3
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_x5fq3")
one_way_collision_margin = 0.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Attack_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_flq58")
volume_db = 10.0
bus = &"SFX"

[node name="Attack_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fhupf")
volume_db = 10.0
bus = &"SFX"

[node name="Damage_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fodb0")
volume_db = -5.0
pitch_scale = 1.2
bus = &"SFX"

[node name="Damage_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wxv4n")
pitch_scale = 1.2
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
